--- a/style/architects.css
+++ b/style/architects.css
@@ -35,6 +35,23 @@
     cursor: pointer;
 }
 
+.text-primary {
+    color: #FF900E;
+}
+
+main {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main>section {
+    margin-top: 130px;
+}
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700px;
+}
+
 /* main style */
 .navber {
     justify-content: space-between;
@@ -76,13 +93,57 @@
 .banner-title {
     font-size: 4rem;
 }
-.banner-img{
+
+.banner-img {
     width: 100%;
 }
+
+.teams {
+    align-items: center;
+}
+
+.teams-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.teams-Features {
+    /* border: 1px solid red; */
+    margin-left: 73px;
+    max-width: 540px;
+    padding: 0 60px;
+}
+
+
+
+#Quick-list {
+    font-weight: 500px;
+}
+
 /* responsive media quary */
- @media screen and (max-width:576px) {
-    .navber,.nav-link{
+@media screen and (max-width: 576px) {
+
+    .navber,
+    .nav-links,
+    .teams {
         flex-direction: column;
+         
     }
-    
- }
+    .teams-img-container{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .teams-Features{
+        margin-left: 20px;
+    }
+}
+
+@media screen and (min-width:576px) and (max-width:992px) {
+
+     .teams{
+        flex-direction: column;
+     }
+     .teams-Features{
+        margin-left: 50px auto;
+     }
+}
