--- a/style/architects.css
+++ b/style/architects.css
@@ -47,6 +47,7 @@ main {
 main>section {
     margin-top: 130px;
 }
+
 .section-title {
     font-size: 2.8rem;
     font-weight: 700px;
@@ -121,6 +122,58 @@ main>section {
     font-weight: 500px;
 }
 
+.facts-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 125px;
+
+}
+
+.fact {
+    border: 1px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    padding: ;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.facts-title {
+    width: 540px;
+    margin-top: 24;
+    margin-bottom: 100px;
+}
+
+.fact-number {
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.fact-name {
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+
+.spons-infi {
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.companis-img {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.companis-img img {
+    filter: grayscale(100%);
+}
+
 /* responsive media quary */
 @media screen and (max-width: 576px) {
 
@@ -128,22 +181,44 @@ main>section {
     .nav-links,
     .teams {
         flex-direction: column;
-         
+
     }
-    .teams-img-container{
-        grid-template-columns: repeat(1,1fr);
+
+    .teams-img-container,
+    .facts-container,
+    .companis-img {
+        grid-template-columns: repeat(1, 1fr);
     }
-    .teams-Features{
+
+    .facts-container {
+        justify-items: center;
+    }
+    .companis-img{
+        justify-items: center;
+        gap: 50px;
+    }
+
+    .teams-Features {
         margin-left: 20px;
     }
 }
 
-@media screen and (min-width:576px) and (max-width:992px) {
+@media screen and (min-width:577px) and (max-width:992px) {
 
-     .teams{
+    .teams {
         flex-direction: column;
-     }
-     .teams-Features{
+    }
+
+    .teams-Features {
         margin-left: 50px auto;
-     }
+    }
+    .facts-container{
+        grid-template-columns: repeat(2,1fr);
+        justify-items: center;
+    }
+    .companis-img{
+        grid-template-columns: repeat(3,1fr);
+        gap: 50px;
+        justify-items: center;
+    }
 }
