--- a/style/architects.css
+++ b/style/architects.css
@@ -121,6 +121,29 @@ main>section {
 #Quick-list {
     font-weight: 500px;
 }
+.features{
+    gap: 140px;
+}
+
+#features-title{
+    border-left: 5px solid  #FF900E;
+    padding-left: 21px;
+}
+.features-card{
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    /* gap: 20px; */
+    margin-bottom:20px;
+    border-radius: 8px;
+    padding: 30px 42px 30px 30px;
+}
+.features-card .card-title{
+    font-weight:600;
+    font-size: 1.25rem;
+    margin-top: 0;
+    margin-bottom: 0;
+    
+
+}
 
 .facts-container {
     display: grid;
