--- a/style/architects.css
+++ b/style/architects.css
@@ -78,7 +78,8 @@ main>section {
 
 .navber,
 .banner {
-    width: 1440px;
+    width:1440px;
+    max-width: 100%;
     margin: 0 auto;
 
 }
@@ -95,7 +96,7 @@ main>section {
     font-size: 4rem;
 }
 
-.banner-img {
+.banner-img{
     width: 100%;
 }
 
@@ -121,27 +122,48 @@ main>section {
 #Quick-list {
     font-weight: 500px;
 }
-.features{
+
+.features {
     gap: 140px;
 }
 
-#features-title{
-    border-left: 5px solid  #FF900E;
+#features-title {
+    border-left: 5px solid #FF900E;
     padding-left: 21px;
 }
-.features-card{
+
+.features-card {
     box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
     /* gap: 20px; */
-    margin-bottom:20px;
+    margin-bottom: 20px;
     border-radius: 8px;
     padding: 30px 42px 30px 30px;
 }
-.features-card .card-title{
-    font-weight:600;
+
+.features-card .card-title {
+    font-weight: 600;
     font-size: 1.25rem;
     margin-top: 0;
     margin-bottom: 0;
-    
+
+
+}
+
+#experience-btn {
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+
+}
+
+.Experience-years {
+    font-size: 4rem;
+    font-weight: 700;
+}
+.Experience-img img{
+    width: 100%;
 
 }
 
@@ -196,13 +218,23 @@ main>section {
 .companis-img img {
     filter: grayscale(100%);
 }
+/* footer */
+.copyright-section{
+    /* border: 1px solid red; */
+    margin: 130px 240px 216px 240px;
+    text-align: center;
+    justify-content: center;
+    padding: 30px 210px;
+    font-size: 1.30rem;
+}
 
 /* responsive media quary */
 @media screen and (max-width: 576px) {
 
     .navber,
     .nav-links,
-    .teams {
+    .teams,
+    .features {
         flex-direction: column;
 
     }
@@ -216,7 +248,8 @@ main>section {
     .facts-container {
         justify-items: center;
     }
-    .companis-img{
+
+    .companis-img {
         justify-items: center;
         gap: 50px;
     }
@@ -224,24 +257,47 @@ main>section {
     .teams-Features {
         margin-left: 20px;
     }
+    #experience-btn{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
+    .copyright-section{
+          margin: 70px 40px;
+           padding: 5px 2px;
+            font-size: 0.8rem;
+
+    }
 }
 
 @media screen and (min-width:577px) and (max-width:992px) {
 
-    .teams {
+    .teams,
+    .features {
         flex-direction: column;
     }
 
     .teams-Features {
         margin-left: 50px auto;
     }
-    .facts-container{
-        grid-template-columns: repeat(2,1fr);
+
+    .facts-container {
+        grid-template-columns: repeat(2, 1fr);
         justify-items: center;
     }
-    .companis-img{
-        grid-template-columns: repeat(3,1fr);
+
+    .companis-img {
+        grid-template-columns: repeat(3, 1fr);
         gap: 50px;
         justify-items: center;
+    }
+     #experience-btn{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
+     .copyright-section{
+          margin: 80px 50px ;
+           padding: 5px 1px;
+            font-size: 0.9rem;
+
     }
 }
